--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         // Atrast p elementu pēc id un ielikt datumu
         document.getElementById('dateElement').textContent = dateString;
     </script>
+
+    <div>
+        <p>kevins vienmer visu saboja</p>
+    </div>
 </body>
 </html>
